# IGG_-64x64M

Firmware/: CMakeLists.txt
Firmware/pio/: CMakeLists.txt  clang-format  iggx.c  iggx.pio  pio_test.py  rickroll.h
Firmware/python_gif_to_code/: gen_c.py  rickroll.h  rickroll.h.gch
Firmware/testCode/: translate_frame.c
IGGDriver/IGGDriver/: IGGDriver-rescue.lib  IGGDriver.kicad_prl  IGGDriver.kicad_pro  IGGDriver.kicad_sch  IGGDriver.kicad_sch-bak  IGGDriver.net  IP2326.kicad_sym  IP2326.lib  IP2368.kicad_sch  IP2368.kicad_sch-bak  MAX1771.kicad_sch  MAX1771.kicad_sch-bak  TPS5430.kicad_sch  USBSolderMux.bak  USBSolderMux.kicad_sym  _autosave-IGG1_OctoDriver.sch  anode.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
IGGDriver/IGGDriver/jlcpcb/: project.db
Mechanical/: Assembly.20240607-021324.FCBak  Assembly.FCStd  Board3DModel.20240606-231741.FCBak  Board3DModel.FCStd  PCBOutline.20240605-172613.FCBak  PCBOutline.FCStd  VFD.20240606-231848.FCBak  VFD.FCStd
docs/: index.html  index2.html
kathode/kathodeDriver/: #auto_saved_files#  .gitignore  IGG1.kicad_sym  fp-info-cache  kathodeDriver.kicad_pcb  kathodeDriver.kicad_prl  kathodeDriver.kicad_pro  kathodeDriver.kicad_sch  kathodeDriver.kicad_sch-bak  sym-lib-table
pcb/: IGG1_OctoDriver.kicad_pcb  IGG1_OctoDriver.kicad_prl  IGG1_OctoDriver.kicad_pro  IGG1_OctoDriver.kicad_sch  _autosave-IGG1_OctoDriver.kicad_pcb  anode.kicad_sch  fp-info-cache  sym-lib-table  ~IGG1_OctoDriver.kicad_sch.lck
pcb/sim/: sim.kicad_pro  sim.kicad_sch
sim/: simulation.asc  simulation.net  simulation.op.raw  simulation.raw
(+51 files in other folders)
